#34 Adjust DateTimeRangeFilter for analytics: - redux store now includes time of recording start and interval - TimeRangeSelector no longer specifies a min start time or max end time - TimeRangeSelector now has Time Of Recording Start Input - TimeRangeSelector now has Interval Selector - Adjusted CSS for additional spacing for input selectors in TimeRangeSelector

--- a/client/src/components/TimeRangeSelector/TimeRangeSelector.css
+++ b/client/src/components/TimeRangeSelector/TimeRangeSelector.css
@@ -13,6 +13,7 @@
 
 .time-range-selector__time-text {
     width: min-content;
+    margin-right: 0.5rem;
 }
 
 .time-range-selector__time-input {
